# server/server.gen.go
@@ -26,6 +26,9 @@ type ServerInterface interface {
 	// Follows a user
 	// (POST /api/user/{id}/follow/{from})
 	FollowHandler(ctx echo.Context, id openapi_types.UUID, from openapi_types.UUID) error
+	// Unfollow a user
+	// (POST /api/user/{id}/unfollow/{from})
+	UnfollowHandler(ctx echo.Context, id openapi_types.UUID, from openapi_types.UUID) error
 }
 
 // ServerInterfaceWrapper converts echo contexts to parameters.
@@ -91,6 +94,30 @@ func (w *ServerInterfaceWrapper) FollowHandler(ctx echo.Context) error {
 	return err
 }
 
+// UnfollowHandler converts echo context to params.
+func (w *ServerInterfaceWrapper) UnfollowHandler(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "id", runtime.ParamLocationPath, ctx.Param("id"), &id)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// ------------- Path parameter "from" -------------
+	var from openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "from", runtime.ParamLocationPath, ctx.Param("from"), &from)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter from: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.UnfollowHandler(ctx, id, from)
+	return err
+}
+
 // This is a simple interface which specifies echo.Route addition functions which
 // are present on both echo.Echo and echo.Group, since we want to allow using
 // either of them for path registration
@@ -123,5 +150,6 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.GET(baseURL+"/api/profile/:user_id", wrapper.ProfileHandler)
 	router.POST(baseURL+"/api/user", wrapper.CreateUser)
 	router.POST(baseURL+"/api/user/:id/follow/:from", wrapper.FollowHandler)
+	router.POST(baseURL+"/api/user/:id/unfollow/:from", wrapper.UnfollowHandler)
 
 }
